# dsMaskpose

./: CMakeLists.txt  Dockerfile  requirements.txt
configs/: app_conf.json  faceid_align_config.txt  faceid_maskpose.txt  faceid_primary.txt  faceid_secondary.txt  mot_primary.txt  mot_sgie.txt  source_list.json  video_list.json
data/labels/: mot_pgie_labels.txt
src/: CMakeLists.txt  faceApp.cpp  faceApp.h  main.cpp
src/common/: app_struct.h  common.h  params.h  utils.cpp  utils.h
src/common/QDTConfig/: ConfigBase.cpp  ConfigBase.h  ConfigHelper.h  ConfigManager.cpp  ConfigManager.h  DeepStreamAppConfig.cpp  DeepStreamAppConfig.h
src/common/QDTLog/: QDTLog.cpp  QDTLog.h
src/deepsort/: CMakeLists.txt  dataType.h  munkres.h  nn_matching.cpp  track.cpp  track.h  tracker.cpp  utility.cpp
src/facealignment/: CMakeLists.txt  alignment_logic.cpp  alignment_logic.h  alignment_logic_kernel.cu  gstnvdsfacealign_allocator.cpp  gstnvdsfacealign_allocator.h  gstnvfacealign.cpp  gstnvfacealign.h  nvdsfacealign_interface.h  nvdsfacealign_property_parser.cpp  nvdsfacealign_property_parser.h
src/facedetection/: CMakeLists.txt  decode_plugin.h  decode_plugin_kernel.cu  nvds_retinaface.cpp  nvds_retinaface.h  trt_utils.h
src/facefeature/: CMakeLists.txt  nvds_facefeature.cpp  onnx_to_trt.py
src/nvdsinfer_customparser/: CMakeLists.txt  nvdsinfer_custombboxparser.cpp
src/pipeline/: FaceBin.cpp  FaceBin.h  MOTBin.cpp  MOTBin.h  NvInferBinBase.cpp  NvInferBinBase.h  NvInferBinBaseProbe.cpp  NvInferBinConfigBase.h  NvInferFaceProbe.cpp  NvInferMOTProbe.cpp  kafka_producer.cpp  kafka_producer.h  message.cpp  message.h
tools/: convert.py  convert_deepsort_detector_to_trt.py  convert_deepsort_extractor_to_trt.py  convert_maskpose.py  convert_maskpose_onnx.py  convert_trt.sh  onnx_to_trt.py  profile_camera.py  test.py  test_convert_maskpose.py
tools/maskpose/: MaskPose_R18_310721.pkl  maskpose.py  models.py
